--- a/MyProject/core/templates/core_base.html
+++ b/MyProject/core/templates/core_base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Django Project</h1>
+        <h1>Welcome to MyProject/core/base.html</h1>
     </header>
-
+    <script scr="{% static 'js/main.js %}
 </body>
 </html>
