--- a/MyProject/core/templates/core_base.html
+++ b/MyProject/core/templates/core_base.html
@@ -11,6 +11,6 @@
     <header>
         <h1>Welcome to MyProject/core/base.html</h1>
     </header>
-    <script scr="{% static 'js/main.js %}
+    <script scr="{% static 'js/main.js' %}"></script>
 </body>
 </html>
